
SIGNIFICANT USER-VISIBLE CHANGES

    o Added 'mass.accuracy' and 'units.accuracy' arguments for
        controlling the m/z accuracy when reading 'processed' imzML

BUG FIXES

    o Fixed bug in reading 'processed' imzML format that caused
        mass spectra to be reconstructed in the wrong order
    o Improved speed accessing columns of Hashmat sparse matrices

CHANGES IN VERSION 1.3.0 [2015-12-16]
-----------------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o Added experimental Binmat class for working with on-disk matrices
    o Added 'attach.only' argument to readImzML and readAnalyze
    o Added experimental support for 3D files from benchmark datasets
    o Added experimental support for plotting 3D images
    o Added experimental support for 'processed' imzML format

BUG FIXES

    o Fixed bug in plotting 3D image slices in the z dimension
    o Fixed bug where large imzML files could not be read due to byte
        offsets being stored as ints; they are now stored as doubles.
    o Fixed bug with strip labels in 3D plotting and with mixed labels
    o Fixed bug with unique m/z feature names for high mass resolutions

CHANGES IN VERSION 1.1.0 [2015-10-1]
-----------------------------------

BUG FIXES

    o Fixed bug in formatting m/z labels affecting R 3.2.2
    o Removed dependency on 'fields' because 'maps' is broken on Windows

CHANGES IN VERSION 0.99.6 [2015-4-5]
-----------------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o Bioconductor Release Candidate 7
    o Added CITATION file for citing Cardinal

BUG FIXES

    o In 'readAnalyze' and 'readMSIData', removed endianness check
      in Analyze 7.5 headers because some ABSciex data files
      specify an incorrect header size, thereby fixing a bug where
      bits would be swapped wrongly and file read incorrectly.

CHANGES IN VERSION 0.99.5 [2015-3-3]
------------------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o Bioconductor Release Candidate 6